@@ -1,1 +1,3 @@
 # FinalYearProject
+
+$ java --module-path /c/Users/thoma/Documents/NetBeansProjects/javafx-sdk-11.0.2/lib --add-modules javafx.controls,javafx.fxml -jar target/SROS-1.0-SNAPSHOT.jar
